--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="location_handover_msg">Hey!\nThank you very much for your services! Another volunteer has taken over the location sharing responsibility right now.\n\n<b>The sharing of your location data to the servers has been stopped.\nYou can now turn off your GPS if you\'re not using it.</b></string>
     <string name="live_location_status">Live Location Status</string>
     <string name="volunteer_details_not_available_currently">Volunteer details not available currently!</string>
+    <string name="no_bus_data">There is no bus data to display!</string>
 </resources>
