--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,8 +41,8 @@
     <string name="enter_bus_route_no">Enter Bus Route No.</string>
     <string name="start_location_sharing">Start Location sharing</string>
     <string name="stop_location_sharing">Stop Location sharing</string>
-    <string name="start_volunteering">Start Volunteering</string>
-    <string name="stop_volunteering">Stop Volunteering</string>
+    <string name="start_volunteering">Start</string>
+    <string name="stop_volunteering">Stop</string>
     <string name="location_handover_msg">Hey!\nThank you very much for your services! Another volunteer has taken over the location sharing responsibility right now.\n\n<b>The sharing of your location data to the servers has been stopped.\nYou can now turn off your GPS if you\'re not using it.</b></string>
     <string name="live_location_status">Live Location Status</string>
     <string name="volunteer_details_not_available_currently">Volunteer details not available currently!</string>
