--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="no_volunteer_available">Sorry! There aren\'t any volunteers sharing location for your route right now! Please try again later!</string>
     <string name="sharer_online_status">Sharer Online Status</string>
     <string name="would_you_like_to_volunteer">No one is volunteering for your bus currently! Press the \'Start Volunteering\' button to go!</string>
+    <string name="improper_shutdown">Looks like the app didn\'t shut down correctly last time!</string>
+    <string name="cannot_start_loc_sharing">Cannot start location sharing! Another volunteer is sharing their location for this bus currently!</string>
 </resources>
