--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="would_you_like_to_volunteer">No one is volunteering for your bus currently! Press the \'Start Volunteering\' button to go!</string>
     <string name="improper_shutdown">Looks like the app didn\'t shut down correctly last time!</string>
     <string name="cannot_start_loc_sharing">Cannot start location sharing! Another volunteer is sharing their location for this bus currently!</string>
+    <string name="no_location_value">It might take a while if we can\'t fetch your location! Are you on a moving bus?</string>
 </resources>
