--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,10 @@
     <string name="no_volunteer_available">Sorry! There aren\'t any volunteers sharing location for this route right now! Please try again later!</string>
     <string name="sharer_online_status">Sharer Online Status</string>
     <string name="would_you_like_to_volunteer">No one is volunteering for your bus currently! Press the \'Start Volunteering\' button to go!</string>
-    <string name="improper_shutdown">Looks like the app didn\'t shut down correctly last time! Please come back to this screen once again to avoid unexpected behaviour.</string>
+    <string name="improper_shutdown">Looks like the app didn\'t shut down correctly last time! Restarting screen…</string>
     <string name="cannot_start_loc_sharing">Cannot start location sharing! Another volunteer is sharing their location for this bus currently!</string>
     <string name="no_location_value">It might take a while if we can\'t fetch your location! Are you on a moving bus?</string>
+    <string name="volunteer_offline">You are offline! Please come back online to resume volunteering!</string>
+    <string name="start_volunteering_offlinemsg">You are offline! Connect back to the Internet to start volunteering!</string>
+    <string name="user_offline">You are offline! Please come online to see your bus\' location!</string>
 </resources>
